@@ -1386,6 +1386,11 @@ HRESULT CBaseAP::AlphaBlt(RECT* pSrc, RECT* pDst, IDirect3DTexture9* pTexture)
             {(float)dst.right, (float)dst.bottom, 0.5f, 2.0f, (float)src.right / w, (float)src.bottom / h},
         };
 
+        for (size_t i = 0; i < _countof(pVertices); i++) {
+            pVertices[i].x -= 0.5;
+            pVertices[i].y -= 0.5;
+        }
+
         hr = m_pD3DDev->SetTexture(0, pTexture);
 
         // GetRenderState fails for devices created with D3DCREATE_PUREDEVICE
